# Ai-agent-Mcp

./: .env.example  .gitignore  Problemstatment.md  README.md  pyproject.toml  render.yaml  vercel.json
.github/workflows/: weekly-pulse.yml
config/: mcp_servers.local.json  mcp_servers.remote.json
dashboard/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
dashboard/src/app/: error.tsx  layout.tsx  loading.tsx  page.tsx
dashboard/src/components/: ActionList.tsx  ApiUnavailable.tsx  EmptyState.tsx  NavBar.tsx  Pill.tsx  QuoteCard.tsx  RunTimeline.tsx  ThemeCard.tsx  WeeklyNotePreview.tsx
dashboard/src/lib/: api.ts  config.ts  pulse-page.ts  pulse-types.ts  types.ts  utils.ts
data/sample/: groww_app_store_reviews.csv  groww_play_store_reviews.csv
docs/: architecture.md  decision.md  eval.md  google-stitch-frontend-prompts.md  implementationplan.md
scripts/: analyze_reviews.py
src/groww_pulse/: __init__.py  cli.py  config.py  sample_data.py
src/groww_pulse/mcp/: __init__.py  client.py  discovery.py  http_client.py  types.py
src/groww_pulse/phase0/: verify.py
src/groww_pulse/phase1/: __init__.py  content_filters.py  fetch_reviews.py  filters.py  models.py  run.py  (+4 more)
tests/: conftest.py  test_phase0.py
tests/phase1/: test_content_filters.py  test_ingestion.py
tests/phase2/: test_scrubbing.py
tests/phase3/: test_theme_analysis.py
tests/phase4/: test_insight_selection.py
tests/phase5/: test_weekly_note.py
tests/phase6/: test_docs_delivery.py
tests/phase7/: test_gmail_delivery.py
tests/phase8/: test_orchestration.py
tests/phase9/: test_api.py
(+66 files in other folders)
